--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
-.App {
+/* .App {
   text-align: center;
-}
+} */
 
-.App-logo {
+/* .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
 }
@@ -20,13 +20,24 @@
 
 .App-link {
   color: #61dafb;
+} */
+.rs-carousel {
+  position: relative;
+  height: 200px;
+  width: 100%;
+  overflow: hidden;
+}
+.rs-carousel-slider-item {
+  text-align: center;
+  background-color: #ebeeee;
+    
 }
 
-@keyframes App-logo-spin {
+/* @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
-}
+} */
